BUG: _static/css: fix navbar/footer overlap

--- a/resume/_static/css/custom.css
+++ b/resume/_static/css/custom.css
@@ -1,4 +1,3 @@
-
 .navbar {
     margin-bottom: 0;
 }
@@ -76,19 +75,4 @@ footer {
     border: 1px solid #e7e7e7;
     margin-top: -1px;
 }
-/* TODO: responsive break */
-@media (min-width: 767px) {
-    #content-wrapper {
-        left: 25%;
-    }
-
-    #navbar-related, footer {
-        padding-left: 25%;
-    }
-
-    footer {
-        width: inherit;
-    }
-}
-
 
